@@ -4,13 +4,13 @@ Hash: SHA1
 AUX librsync-0.9.7-huge-files.patch 1022 RMD160 f797d985fe43bf052657476e1141302d7137ade1 SHA1 739ceada1e264553832a04305a344941f1ad9b03 SHA256 37a6ccc39b7bec1765fb5a99cb3b1d6b1572ad611c0724c594f671d25246535d
 DIST librsync-0.9.7.tar.gz 453802 RMD160 39ca29334d0efabc0ee9e4d44abbe73a7d2fe831 SHA1 d575eb5cae7a815798220c3afeff5649d3e8b4ab SHA256 6633e4605662763a03bb6388529cbdfd3b11a9ec55b8845351c1bd9a92bc41d6
 EBUILD librsync-0.9.7-r1.ebuild 897 RMD160 db9072a8f4c87301b80b0e81f1cdc0c86fcf0bc7 SHA1 67a6caf8e21261512950046ca95b2d34c15a818e SHA256 c17b0dcb271928b00ecae4bbfa689e6651fd58165cfc149abfc8d326adb4049f
-EBUILD librsync-0.9.7-r2.ebuild 1005 RMD160 34ebddd0cee4ef9931f51809fc3f0b0a0280d778 SHA1 e3b1a4ff08774c970cfd23dbea1ea86461327a04 SHA256 ee069608b4915e679e4a2723bafdb86c9371a318b599237be99a3d556d23fd12
-MISC ChangeLog 3582 RMD160 dcc5a61dba1faef93792e6e131a2a9eb2f417ed2 SHA1 84a5bce3a0319369421f94fcdf0ccf8af0afb636 SHA256 83ab4404a7fdd7732b53369f9a6ff48a5068eeded7e7d1429c8dbb156be2660f
-MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
+EBUILD librsync-0.9.7-r2.ebuild 1037 RMD160 8cad39409e4732bb4043e0088f8a55063a01fcb3 SHA1 556cb2f729ba144fd2b188b0467e648c49f06538 SHA256 e0d0dc4a8a2bc4d12987711fd2442da395439c5c1f72381a129e63b20c9247a3
+MISC ChangeLog 3854 RMD160 bd96ca7388cdc4e90b764a01f8a3904443fd4608 SHA1 324d0e1b34a9d78a2e8a61c27ca8fa90379bcb1f SHA256 67846173608ed9ceea3261a6f668e9f93323f68eacf7d2b3e3003dc2953d6658
+MISC metadata.xml 214 RMD160 ea476e10a778f79d9273adbbc2403db67d025e10 SHA1 7f156558998e184ab8ea7417fd4739048f012a09 SHA256 0e019c1dee563e5b23815be471ae1b65fcaf721a91ec48037446d41ca787d3e5
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk3VbDwACgkQX3X2B8XHTokc9wCeLIBWubPPGxP2sTiUKiBMX5Mz
-b/IAoIeLp73F4IB85tKrk/q/BSIQva+W
-=240f
+iEYEARECAAYFAk+/5BkACgkQX3X2B8XHTomQNQCgnfw3WAkkmfjDNq2+YR1Xv33W
+KDQAn0TdIviCibcf1PRGi6UFzRuQbDa8
+=uWID
 -----END PGP SIGNATURE-----
