@@ -1,6 +1,13 @@
 # ChangeLog for net-libs/librsync
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/librsync/ChangeLog,v 1.30 2011/04/09 16:24:03 jer Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/librsync/ChangeLog,v 1.32 2011/11/28 11:48:59 phajdan.jr Exp $
+
+  28 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  librsync-0.9.7-r2.ebuild:
+  x86 stable wrt bug #391509
+
+  26 Nov 2011; Markos Chandras <hwoarang@gentoo.org> librsync-0.9.7-r2.ebuild:
+  Add missing dev-libs/popt on RDEPEND. Stable on amd64 wrt bug #391509
 
 *librsync-0.9.7-r2 (09 Apr 2011)
 
